--- a/README.org
+++ b/README.org
@@ -108,7 +108,8 @@ A user should be able to:
 
 
 * TODO COMMENT [0/7]
-** TODO Log in with their learn-co account
+** STARTED Log in with their learn-co account
+- State "STARTED"    from "TODO"       [2019-09-13 Fri 15:39]
 ** TODO View the batches (s)he is teaching
 ** TODO View a table of students within a particular batch. [0/5]
 *** TODO names
