--- a/README.org
+++ b/README.org
@@ -107,8 +107,10 @@ A user should be able to:
    3. Store G in a collection of made groups
 
 
-* TODO COMMENT [0/7]
-** STARTED Log in with their learn-co account
+* TODO COMMENT [1/7]
+** DONE Log in with their learn-co account
+CLOSED: [2019-09-13 Fri 16:47]
+- State "DONE"       from "STARTED"    [2019-09-13 Fri 16:47]
 - State "STARTED"    from "TODO"       [2019-09-13 Fri 15:39]
 ** TODO View the batches (s)he is teaching
 ** TODO View a table of students within a particular batch. [0/5]
