--- a/README.org
+++ b/README.org
@@ -107,14 +107,17 @@ A user should be able to:
    3. Store G in a collection of made groups
 
 
-* TODO COMMENT [1/9]
+* TODO COMMENT [2/9]
 ** DONE Log in with their learn-co account
 CLOSED: [2019-09-13 Fri 16:47]
 - State "DONE"       from "STARTED"    [2019-09-13 Fri 16:47]
 - State "STARTED"    from "TODO"       [2019-09-13 Fri 15:39]
-** STARTED Configure webpacker with react
+** DONE Configure webpacker with react
+CLOSED: [2019-09-17 Tue 15:33]
+- State "DONE"       from "STARTED"    [2019-09-17 Tue 15:33]
 - State "STARTED"    from "TODO"       [2019-09-17 Tue 11:37]
 ** TODO Setup rspec
+** TODO Write login page
 ** TODO View the batches (s)he is teaching
 ** TODO View a table of students within a particular batch. [0/5]
 *** TODO names
