--- a/README.org
+++ b/README.org
@@ -107,7 +107,7 @@ A user should be able to:
    3. Store G in a collection of made groups
 
 
-* TODO COMMENT [2/9]
+* TODO COMMENT [2/11]
 ** DONE Log in with their learn-co account
 CLOSED: [2019-09-13 Fri 16:47]
 - State "DONE"       from "STARTED"    [2019-09-13 Fri 16:47]
@@ -116,7 +116,9 @@ CLOSED: [2019-09-13 Fri 16:47]
 CLOSED: [2019-09-17 Tue 15:33]
 - State "DONE"       from "STARTED"    [2019-09-17 Tue 15:33]
 - State "STARTED"    from "TODO"       [2019-09-17 Tue 11:37]
-** TODO Setup rspec
+** STARTED Setup rspec
+- State "STARTED"    from "TODO"       [2019-09-18 Wed 10:17]
+** TODO Setup jest+enzyme
 ** TODO Write login page
 ** TODO View the batches (s)he is teaching
 ** TODO View a table of students within a particular batch. [0/5]
