--- a/README.org
+++ b/README.org
@@ -107,7 +107,7 @@ A user should be able to:
    3. Store G in a collection of made groups
 
 
-* TODO COMMENT [4/11]
+* TODO COMMENT [5/11]
 ** DONE Log in with their learn-co account
 CLOSED: [2019-09-13 Fri 16:47]
 - State "DONE"       from "STARTED"    [2019-09-13 Fri 16:47]
@@ -124,9 +124,12 @@ CLOSED: [2019-09-18 Wed 13:44]
 CLOSED: [2019-09-18 Wed 15:25]
 - State "DONE"       from "STARTED"    [2019-09-18 Wed 15:25]
 - State "STARTED"    from "TODO"       [2019-09-18 Wed 13:44]
-** STARTED Write login page
+** DONE Write login page
+CLOSED: [2019-09-20 Fri 09:27]
+- State "DONE"       from "STARTED"    [2019-09-20 Fri 09:27]
 - State "STARTED"    from "TODO"       [2019-09-18 Wed 15:27]
-** TODO View the batches (s)he is teaching
+** STARTED View the batches (s)he is teaching
+- State "STARTED"    from "TODO"       [2019-09-20 Fri 09:28]
 ** TODO View a table of students within a particular batch. [0/5]
 *** TODO names
 *** TODO slack handles
